writing-a-c-compiler-tests/tests/chapter_8/invalid_semantics/out_of_scope_do_loop.c
 

int main(void) {
    do {
        int a = a + 1;
    } while (a < 100);
}